# sup-di

./: CMakeLists.txt  ChangeLog  pom.xml  project.spec.in  todo.md  unit.spec
cmake/config/: sphinx-conf.py.in  sup-di-config.cmake.in
cmake/module/: configuration.cmake  installation.cmake  packaging.cmake
doc/: CMakeLists.txt  app.rst  development.rst  index.rst  introduction.rst  readme.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/sup-di-composer/: CMakeLists.txt  main.cpp
src/cmake/: configuration.cmake  installation.cmake
src/lib/sup/: CMakeLists.txt
src/lib/sup/di/: CMakeLists.txt  dependency_traits.h  di_utils.cpp  di_utils.h  error_codes.cpp  error_codes.h  forwarding_type_traits.h  index_sequence.h  injection_type_traits.h  instance_container.cpp  instance_container.h  object_manager.cpp  object_manager.h  ownership_traits.h  readme.md  service_store.h  storage_type_traits.h  template_utils.h  type_functions.h  type_key_list.cpp  type_key_list.h  type_list.h  type_map.h
src/lib/sup/di-composer-core/: CMakeLists.txt  composition_root.cpp  composition_root.h  constants.h  double_instance_element.cpp  double_instance_element.h  element_constructor_map.cpp  element_constructor_map.h  exceptions.cpp  exceptions.h  function_element.cpp  function_element.h  i_composer_element.cpp  i_composer_element.h  instance_element.cpp  instance_element.h  integer_instance_element.cpp  integer_instance_element.h  library_element.cpp  library_element.h  object_composer_element.cpp  object_composer_element.h  string_instance_element.cpp  string_instance_element.h  tree_extract.cpp  tree_extract.h
src/lib/sup/di-services/: CMakeLists.txt  keep_alive.cpp  keep_alive.h  registered_names.h  registration.cpp
src/main/c++/: CMakeLists.txt
src/main/c++/include/: CMakeLists.txt  IndexSequence.h  InstanceContainer.h  ObjectManager.cpp  ObjectManager.h  TypeMap.h  TypeStringList.h
src/main/c++/libsup-di/sup/di/: dependency_traits.h  error_codes.h  index_sequence.h  instance_container.h  object_manager.cpp  object_manager.h  type_map.h  type_string_list.h
src/main/c++/sup/: CMakeLists.txt
src/main/c++/sup-di-composer/: CMakeLists.txt  composition_root.cpp  composition_root.h  constants.h  element_constructor_map.cpp  element_constructor_map.h  exceptions.cpp  function_element.cpp  function_element.h  global_function.cpp  global_function.h  instance_element.cpp  instances.cpp  instances.h  library_element.cpp  library_element.h  main.cpp  object_composer.cpp  object_composer.h  object_composer_element.cpp  object_composer_element.h  string_instance_element.cpp  string_instance_element.h  tree_extract.cpp  utils.cpp  utils.h
src/main/c++/sup-di-object-manager/: CMakeLists.txt  main.cpp
src/main/c++/sup/di/: CMakeLists.txt  DependencyTraits.h  IndexSequence.h  InstanceContainer.h  ObjectManager.cpp  ObjectManager.h  TypeMap.h  TypeStringList.h  dependency_traits.h  error_codes.cpp  error_codes.h  instance_container.cpp  instance_container.h  object_manager.cpp  object_manager.h  type_functions.h  type_map.h  type_string_list.h
src/main/c++/sup/di-composer-core/: exceptions.cpp  exceptions.h  i_composer_element.h  instance_element.cpp  object_composer_element.h
src/sup/: CMakeLists.txt
src/sup-di-composer/: CMakeLists.txt
src/sup/di/: dependency_traits.h  error_codes.h  type_map.h  type_string_list.h
src/sup/di-composer-core/: CMakeLists.txt  composition_root.cpp  composition_root.h  element_constructor_map.cpp  exceptions.cpp  function_element.h  i_composer_element.cpp
src/test/c++/: CMakeLists.txt  Makefile  test.sh
src/test/c++/service_wrapper/: CMakeLists.txt  registration.cpp  service_wrapper_config.h.in  services.cpp
src/test/c++/services/: CMakeLists.txt  ExternalTestServices.cpp  ExternalTestServices.h  external_test_services.cpp  external_test_services.h  test_config.h.in
src/test/c++/unit/: CMakeLists.txt  ObjectManager-tests.cpp  ObjectManagerExternal-tests.cpp  TestConfig.h.in  TestServices.h  TypeMap-tests.cpp  TypeStringList-tests.cpp  composition_root_tests.cpp  exceptions_tests.cpp  global_test_environment.cpp  global_test_objects.cpp  global_test_objects.h  object_composer_element_tests.cpp  object_manager_external_tests.cpp  object_manager_tests.cpp  temporary_file.cpp  test_config.h.in  test_services.h  type_map_tests.cpp  type_string_list_tests.cpp
src/test/resources/: example.xml  registration.cpp  registration.h
test/: CMakeLists.txt
test/parasoft/: CMakeLists.txt
test/resources/: CMakeLists.txt  client.h  example.xml  keep_alive.xml  readme.md  registration.cpp
test/service_wrapper/: CMakeLists.txt  example.xml.in  registration.cpp  service_wrapper_config.h.in  services.cpp  services.h
test/services/: CMakeLists.txt  external_test_services.cpp  external_test_services.h  test_config.h.in
test/unit/: CMakeLists.txt  composition_root_tests.cpp  dependency_traits_tests.cpp  double_instance_element_tests.cpp  error_codes_tests.cpp  exceptions_tests.cpp  function_element_tests.cpp  global_test_environment.cpp  global_test_objects.cpp  global_test_objects.h  index_sequence_tests.cpp  instance_container_tests.cpp  instance_element_tests.cpp  integer_instance_element_tests.cpp  keep_alive_tests.cpp  library_element_tests.cpp  object_composer_element_tests.cpp  object_manager_external_tests.cpp  object_manager_tests.cpp  service_store_tests.cpp  string_instance_element_tests.cpp  temporary_file.cpp  temporary_file.h  test_services.h  tree_extract_tests.cpp  type_map_tests.cpp  type_string_list_tests.cpp
